Add objects to the map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(rogue_likely_lib STATIC
     lib/rogue_likely.cpp
     lib/ui/ncurses/ncurses_ui.cpp
     lib/world/world_generator.cpp
+    lib/object/alive_object.cpp
 )
 target_link_libraries(rogue_likely_lib LINK_PUBLIC ${CURSES_LIBRARIES})
 
