--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(${PROJECT_SOURCE_DIR}/lib)
 include_directories(${PROJECT_SOURCE_DIR}/third_party/CLI11-release-1.7.1)
 
 add_library(rogue_likely_lib STATIC
+    lib/controller/controller.cpp
     lib/object/alive_object.cpp
     lib/object/object.cpp
     lib/object/object_fwd.cpp
